--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:1.19.0-alpine
 
 RUN rm /code/nginx/conf.d/default.conf
-COPY nginx.conf /code/nginx/conf.d
+COPY nginx.conf22 /code/nginx/conf.d
