--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,11 +13,11 @@ services:
     env_file:
       - ./.env
   web:
-    build: .
+    image: cementhools/yamdb:latest
     restart: always
     volumes:
       - static_volume:/static/
-      - nginx:/code/nginx/
+      - nginx:/nginx/
     expose:
       - 8000
     depends_on:
@@ -30,7 +30,7 @@ services:
       - static_volume:/static/
       - nginx:/etc/nginx/conf.d/
     ports:
-      - 8080:80
+      - 8000:80
     depends_on:
       - web
 
