--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,17 +7,17 @@ volumes:
 
 services:
   db:
-    image: postgres:latest
+    image: postgres:13.2
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
   web:
-    image: cementhools/yamdb:latest
+    image: cementhools/yamdb_final:latest
     restart: always
     volumes:
-      - static_volume:/static/
-      - nginx:/nginx/
+      - static_volume:/code/static/
+      - nginx:/code/nginx/
     expose:
       - 8000
     depends_on:
@@ -25,12 +25,12 @@ services:
     env_file:
       - ./.env
   nginx:
-    image: nginx:latest
+    image: nginx:1.19-alpine
     volumes:
       - static_volume:/static/
       - nginx:/etc/nginx/conf.d/
     ports:
-      - 8000:80
+      - 8080:80
     depends_on:
       - web
 
