--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -5,7 +5,6 @@ on: [push]
 jobs:
   tests:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
@@ -20,10 +19,8 @@ jobs:
           pip install -r requirements.txt
       - name: Lint with flake8
         run: flake8 .
-
       - name: Test with pytest
         run: pytest
-
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -45,29 +42,28 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/yamdb:latest
 
-#  deploy:
-#    runs-on: ubuntu-latest
-#    needs: build_and_push_to_docker_hub
-#    steps:
-#      - name: executing remote ssh commands to deploy
-#        uses: appleboy/ssh-action@master
-#        with:
-#          host: ${{ secrets.HOST }}
-#          username: ${{ secrets.USER }}
-#          key: ${{ secrets.SSH_KEY }}
-##          passphrase: ${{ secrets.PASSPHRASE }} # если ваш ssh-ключ защищен паролем
-#          script: |
-#            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/flask-app:latest
-#            sudo docker stop $(sudo docker ps -a -q)
-#            sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/flask-app:latest
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+      - name: executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            sudo docker pull cementhools/yamdb:latest
+            sudo docker stop $(sudo docker ps -a -q)
+            sudo docker run --rm -d -p 8000:8000 cementhools/yamdb:latest
 
   send_message:
     runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
+    needs: deploy
     steps:
       - name: send message
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: ${{ github.workflow }} успешно выполнен!
+          message: ${{ github.workflow }} успешно выполнен!!
