--- a/.github/workflows/yamdb.yaml
+++ b/.github/workflows/yamdb.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb:latest
+          tags: cementhools/yamdb:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,9 +53,9 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            sudo docker pull cementhools/yamdb:latest
+            sudo docker pull cementhools/yamdb_final:latest
             sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 8000:8000 cementhools/yamdb:latest
+            sudo docker run --rm -d -p 8000:8000 cementhools/yamdb_final:latest
 
   send_message:
     runs-on: ubuntu-latest
