--- a/nginx/mynginx.conf
+++ b/nginx/mynginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen  [::]:80;
-    server_name localhost 130.193.43.51 cement-yatube.tk www.cement-yatube.tk;
+    #server_name 130.193.43.51 cement-yatube.tk www.cement-yatube.tk;
 
     location /static/ {
         alias /static/;
@@ -14,9 +14,4 @@ server {
     }
 
     server_tokens off;
-
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
 }
