--- a/.github/workflows/yamdb.yaml
+++ b/.github/workflows/yamdb.yaml
@@ -57,7 +57,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             sudo docker-compose down
-            sudo docker-compose up --build
+            docker-compose build
+            docker-compose up -d
 
   send_message:
     runs-on: ubuntu-latest
