--- a/.github/workflows/yamdb.yaml
+++ b/.github/workflows/yamdb.yaml
@@ -57,8 +57,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             sudo docker-compose down
-            docker-compose build
-            docker-compose up -d
+            sudo docker-compose build
+            sudo docker-compose up -d
 
   send_message:
     runs-on: ubuntu-latest
