--- a/nginx/mynginx.conf
+++ b/nginx/mynginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen  [::]:80;
-    #server_name 130.193.43.51 cement-yatube.tk www.cement-yatube.tk;
+    server_name 130.193.43.51 cement-yatube.tk www.cement-yatube.tk;
 
     location /static/ {
         alias /static/;
