--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -1,9 +1,8 @@
 name: yamdb workflow
 
-on:
-  push:
-    branches:
-      - master
+on: [push]
+  branches:
+    - master
 
 jobs:
   tests:
@@ -69,4 +68,4 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: ${{ github.workflow }} успешно выполнен!!
+          message: ${{ github.workflow }} успешно выполнен!!pytest
